--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap');
+
 html, body {
   line-height: 1.2em;
   font-size: 1.05em;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Space Mono', 'Courier New', Courier, monospace;
 }
 
 pre {
