--- a/main.css
+++ b/main.css
@@ -9,20 +9,26 @@ html, body {
   font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 2.5rem;
+.diagram-container {
+  margin: 2em 0px;
+  text-align: center;
 }
 
 .diagram {
   filter: invert(var(--invert));
 }
 
+.content p {
+  margin: 2em 0px;
+}
+
 .content {
   max-width: 800px;
+  padding: 1.2em;
   margin: auto;
   font-size: 1.15em;
-  line-height: 32px;
-  text-align: justify;
+  text-rendering: optimizeLegibility;
+  line-height: 1.6;
 }
 
 .nav {
@@ -32,6 +38,19 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-evenly;
   padding: 1em;
   margin: 0px 10%;
+}
+
+.index {
+  list-style-type: none;
+  padding-inline: unset;
+}
+
+ul.toc {
+  list-style-type: none;
+}
+
+li.toc-li {
+  list-style: circle;
 }
 
 .footer-container {
@@ -45,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 blockquote {
-  padding: 5px 10px;
+  padding: 2px 10px;
   border-radius: 2px;
   border-left: lightgrey thick solid;
 }
@@ -67,4 +86,17 @@ pre {
   padding: 1em;
   background-color: var(--font-color);
   color: var(--background-color);
+}
+
+p code {
+  border-radius: 5px;
+  background: lemonchiffon;
+  color: black;
+  padding: 0px 4px;
+}
+
+.nav .title {
+  border-bottom: none;
+  font-family: monospace;
+  padding: 0.5em;
 }
